--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.1",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",        
+    "react-dom": "^18.2.0",  
     "tailwindcss": "^4.0.15",
     "zustand": "^5.0.3"
   }
