--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.3",
-    "react": "^18.2.0",        
-    "react-dom": "^18.2.0",  
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.0.15",
     "zustand": "^5.0.3"
   }
